footer coppy align fixed

--- a/responsive-delivery-website-main/assets/css/styles.css
+++ b/responsive-delivery-website-main/assets/css/styles.css
@@ -894,6 +894,7 @@ img {
   text-align: center;
   color: var(--text-color-light);
   font-size: var(--small-font-size);
+  grid-column: 1 / -1;
 }
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar{
